Fixed all methods that has something in common with reservations